<resources>
    <string name="app_name">Fitnesse</string>
    <string name="title_home">Home</string>
    <string name="fitnesse_caps">FITNESSE</string>
    <string name="have_account_q">Do you have an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="don_t_have_account_q">Don\'t have an account?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="workouts_caps">WORKOUTS</string>
    <string name="exercises_caps">EXERCISES</string>
    <string name="graphs_caps">GRAPHS</string>
    <string name="reps">Reps:</string>
    <string name="edit">Edit</string>
    <string name="profile_caps">PROFILE</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="height">Height:</string>
    <string name="bmi">BMI:</string>
    <string name="weight">Weight:</string>
    <string name="create_new_exercise">Create New Exercise</string>
    <string name="description">Description:</string>
    <string name="time_s">Time (s):</string>
    <string name="create_new_workout">Create New Workout</string>
    <string name="mark">Mark</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="start_time">00:00:00</string>
    <string name="reset">Reset</string>
    <string name="timer">Timer</string>
    <string name="profile">Profile</string>
    <string name="dash">-</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="kg">kg</string>
    <string name="m">m</string>
    <string name="workouts">WORKOUTS</string>
    <string name="exercises">EXERCISES</string>
    <string name="set_count">Set Count:</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="delete">Delete</string>
    <string name="workout_name">Workout Name</string>
    <string name="or">OR</string>
    <string name="_12345678">12345678</string>
    <string name="caroline_e_okun_gmail_com">caroline.e.okun@gmail.com</string>
    <string name="m_f">M/F</string>
    <string name="add_workout">Add Workout</string>
    <string name="edit_exercise_string">Edit Exercise</string>
    <string name="update_string">Update</string>
    <string name="done_string">Done</string>
    <string name="exercise_details_string">Exercise Details</string>
    <string name="cancel_string">Cancel</string>
    <string name="workouts_string">workouts</string>
    <string name="exercises_string">exercises</string>
    <string name="name_string">name</string>
    <string name="description_string">description</string>
    <string name="value_string">value</string>
    <string name="isMeasuredWithReps">isMeasuredWithReps</string>
    <string name="sets_string">sets</string>
    <string name="recordList">recordList</string>
    <string name="workout_id_string">workoutID</string>
    <string name="workout_name_string">workoutName</string>
    <string name="edit_workout_string">Edit Workout</string>
    <string name="reps_seconds_string">Reps/Seconds</string>
    <string name="progress_string">Your Progress!</string>
    <string name="empty_email_string">This field can not be empty</string>
    <string name="empty_password_string">This field can not be empty</string>
    <string name="at_symbol_string">\@</string>
    <string name="weight_string">weight</string>
    <string name="height_string">height</string>
    <string name="gender_string">gender</string>
    <string name="age_string">age</string>
    <string name="user_string">user</string>
    <string name="save_string">save</string>
    <string name="edit_string">edit</string>
    <string name="zero_string">0:0.0</string>
    <string name="workout_name_intent">workoutName</string>
    <string name="workout_id_intent">workoutID</string>
    <string name="users_string">users</string>
</resources>