<?xml version="1.0" encoding="utf-8"?>
<!--suppress XmlUnusedNamespaceDeclaration -->
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tvTitle"
            android:text="@string/profile_caps"
            android:textSize="30sp"
            android:layout_marginTop="80dp"
            android:textColor="@color/colorPrimaryDark"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            android:paddingVertical="20dp"
            android:layout_margin="20dp"
            android:background="#f1f1f1"
            tools:targetApi="o">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/edit"
                android:id="@+id/btnEdit"
                android:layout_marginHorizontal="15dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvName"
                android:text="@string/name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnEdit"
                android:layout_marginTop="20dp"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"/>
        <android.support.design.widget.TextInputEditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/etName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvName"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvGender"
                android:text="@string/gender"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"/>
        <android.support.design.widget.TextInputEditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/etGender"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvGender"
                android:hint="@string/m_f"
                android:maxLength="1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvAge"
                android:text="@string/age"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvGender"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"/>
        <android.support.design.widget.TextInputEditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/etAge"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvAge"
                android:inputType="number"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvHeight"
                android:text="@string/height"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAge"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"/>
        <android.support.design.widget.TextInputEditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/etHeight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvHeight"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/m"
                android:text="@string/m"
                app:layout_constraintLeft_toRightOf="@id/etHeight"
                app:layout_constraintTop_toBottomOf="@+id/tvAge"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvWeight"
                android:text="@string/weight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeight"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp" tools:ignore="RtlHardcoded"/>
        <android.support.design.widget.TextInputEditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/etWeight"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvWeight"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/kg"
                android:text="@string/kg"
                app:layout_constraintLeft_toRightOf="@id/etWeight"
                app:layout_constraintTop_toBottomOf="@+id/tvHeight"
                android:textSize="17sp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvBMI"
                android:text="@string/bmi"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWeight"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"
                android:paddingTop="20dp"/>
        <TextView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:id="@+id/etBMI"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvBMI"
                android:text="@string/dash"
                android:textSize="17sp"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/navigation"/>

</android.support.constraint.ConstraintLayout>