<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/manageItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_exercise"
            android:textSize="20dp"
            android:id="@+id/tvAddEditPrompt"/>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_text_input"
            android:hint="@string/name">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description_text_input"
            android:hint="@string/description">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
        <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/rb_reps"
                android:orientation="vertical"
                android:id="@+id/radioGroup"
                android:padding="20dp">
            <RadioButton
                    android:id="@+id/rb_reps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reps"
                    android:layout_marginBottom="5dp"/>
            <RadioButton
                    android:id="@+id/rb_secs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_s"/>
        </RadioGroup>
        <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/reps_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/secs_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sets_text_input"
            android:hint="@string/set_count">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/sets_et"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </android.support.design.widget.TextInputLayout>

</LinearLayout>