<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_login"
        tools:context=".LoginActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tvTitle"
            android:text="@string/fitnesse_caps"
            android:textSize="30sp"
            android:layout_marginTop="80dp"
            android:textColor="@color/colorPrimaryDark"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tvHasAccountQ"
            android:layout_marginTop="40dp"
            android:text="@string/have_account_q"/>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvHasAccountQ"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:id="@+id/tilEmail">
    </com.rengwuxian.materialedittext.MaterialEditText>

    <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="20dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:id="@+id/tilPassword">
    </com.rengwuxian.materialedittext.MaterialEditText>

    <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="20dp"
            android:text="@string/sign_in"
            android:id="@+id/btnSignIn"/>

    <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/separatorLineLeft"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:visibility="visible"/>

    <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/separatorLineRight"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/separatorLineLeft"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tvHasNoAccountQ"
            android:layout_marginTop="40dp"
            android:text="@string/don_t_have_account_q"/>

    <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvHasNoAccountQ"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginHorizontal="20dp"
            android:text="@string/register"
            android:id="@+id/btnRegister"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/tvOR"
            android:text="OR"/>


</android.support.constraint.ConstraintLayout>